--- a/app/components/landing-component/landing-page.module.scss
+++ b/app/components/landing-component/landing-page.module.scss
@@ -8,16 +8,18 @@
     width: 100dvw;
     background-color: var(--background-color-darker);
     border-bottom: 0.5px solid #2e2e2e;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    // background-color: rgba(0, 0, 0, 0.239);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.771) 0%, rgba(0, 0, 0, 0.239) 30%);
 
-    // position: fixed;
-    // top: 0;
-    // left: 0;
-    // right: 0;
-    // z-index: 2000;
-    // backdrop-filter: blur(5px);
-    // -webkit-backdrop-filter: blur(5px);
-    // background: var(--background-color-dark);
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 2000;
+    width: 100%;
+    height: min-content;
+    align-items: flex-start;
 
     .logoHam {
         display: flex;
@@ -43,36 +45,28 @@
         width: 30px;
         height: 40px;
         position: relative;
-        -webkit-transform: rotate(0deg);
-        -moz-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg);
-        -webkit-transition: .5s ease-in-out;
-        -moz-transition: .5s ease-in-out;
-        -o-transition: .5s ease-in-out;
-        transition: .5s ease-in-out;
         cursor: pointer;
 
         span {
             display: block;
             position: absolute;
             height: 2.5px;
-            width: 90%;
+            width: 70%;
             background: #d2d2d2;
             border-radius: 9px;
             opacity: 1;
-            left: 0;
+            left: 5px;
             -webkit-transform: rotate(0deg);
             -moz-transform: rotate(0deg);
             -o-transform: rotate(0deg);
             transform: rotate(0deg);
-            -webkit-transition: .25s ease-in-out;
-            -moz-transition: .25s ease-in-out;
-            -o-transition: .25s ease-in-out;
-            transition: .25s ease-in-out;
+            -webkit-transition: 0.40s var(--transition-ease-in);
+            -moz-transition: 0.40s var(--transition-ease-in);
+            -o-transition: 0.40s var(--transition-ease-in);
+            transition: 0.40s var(--transition-ease-in);
 
             &:nth-child(1) {
-                top: 10px;
+                top: 12px;
                 transform-origin: left center;
             }
 
@@ -82,33 +76,37 @@
             }
 
             &:nth-child(3) {
-                width: 50%;
-                top: 26px;
+                width: 40%;
+                top: 24px;
                 transform-origin: left center;
             }
         }
 
         &.open {
             background-color: transparent;
+
             span {
-                
+
                 &:nth-child(1) {
                     transform: rotate(45deg);
                     top: 8px;
                     left: 5px;
-                  }
-            
-                  &:nth-child(2) {
+                    width: 80%;
+
+                }
+
+                &:nth-child(2) {
                     width: 0%;
                     opacity: 0;
-                  }
-            
-                  &:nth-child(3) {
+                }
+
+                &:nth-child(3) {
                     transform: rotate(-45deg);
-                    width: 100%;
-                    top: 28px;
-                    left: 4px;
-                  }
+                    width: 80%;
+                    top: 25px;
+                    left: 5px;
+
+                }
             }
         }
 
@@ -121,32 +119,39 @@
 }
 
 .overlayMenu {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 2000;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    background-color: rgba(0, 0, 0, 0.779);
-    width: 100%;
-    height: 100%;
-    align-items: flex-start;
+    height: min-content;
+    // background-color: rgba(0, 0, 0, 0.239);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.88) 0%, rgba(0, 0, 0, 0.239) 30%);
 
 }
 
 
 .titleLinksMobile {
-    padding: 20% 0%;
+    padding: 0% 0%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: 87dvw;
+    opacity: 0;
+    max-height: 0;
+    height: 100vh;
+    // background-color: #E8513D;
+    -webkit-transition: opacity 0.45s var(--transition-ease-in), max-height 0.45s var(--transition-ease-in), padding 0.45s var(--transition-ease-in);
+    -moz-transition: opacity 0.45s var(--transition-ease-in), max-height 0.45s var(--transition-ease-in), padding 0.45s var(--transition-ease-in);
+    -o-transition: opacity 0.45s var(--transition-ease-in), max-height 0.45s var(--transition-ease-in), padding 0.45s var(--transition-ease-in);
+    transition: opacity 0.45s var(--transition-ease-in), max-height 0.45s var(--transition-ease-in), padding 0.45s var(--transition-ease-in);
 
+
+    &.open {
+        max-height: 100vh;
+        opacity: 1;
+        padding: 10% 0%;
+    }
 
     a {
         // padding: 0 10px;
-        padding-bottom: 30px;
-        font-size: 0.9rem;
+        padding-bottom: 20px;
+        // font-size: 0.6rem;
         font-size: 25px;
         font-weight: 400;
         line-height: 1;
@@ -217,6 +222,19 @@
     }
 }
 
+.section1MoveDown {
+    transform: translateY(30px) scale(0.95);
+}
+
+.section2MoveDown {
+    transform: translateY(10px) scale(0.95);
+}
+
+.section3MoveDown {
+    transform: translateY(10px) scale(0.95);
+}
+
+
 
 .section1 {
     position: relative;
@@ -233,11 +251,57 @@
     background-repeat: no-repeat;
     z-index: 0;
     // margin-bottom: -20px;
+    -webkit-transition: transform 0.45s var(--transition-ease-in);
+    -moz-transition: transform 0.45s var(--transition-ease-in);
+    -o-transition: transform 0.45s var(--transition-ease-in);
+    transition: transform 0.45s var(--transition-ease-in);
+
 
     .homeQuote {
         display: flex;
         flex-direction: column;
         margin-bottom: 7%;
+
+        h1 {
+            opacity: 0;
+            animation: fadeInUp 1s ease forwards;
+        }
+
+        h1:nth-child(1) {
+            animation-delay: 0s;
+        }
+
+        h1:nth-child(2) {
+            animation-delay: 0.3s;
+        }
+
+        h1:nth-child(3) {
+            animation-delay: 0.6s;
+        }
+
+        h6 {
+            opacity: 0;
+            animation: fadeInUp 1s ease forwards;
+            animation-delay: 0.9s;
+
+            span {
+                color: #ff4500; // Adjust the color as needed
+            }
+        }
+    }
+
+
+
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
     }
 
 
@@ -444,6 +508,10 @@
     background-position: 50% -100%;
     background-repeat: no-repeat;
     margin-bottom: -15px;
+    -webkit-transition: transform 0.45s var(--transition-ease-in);
+    -moz-transition: transform 0.45s var(--transition-ease-in);
+    -o-transition: transform 0.45s var(--transition-ease-in);
+    transition: transform 0.45s var(--transition-ease-in);
 
 
     h1 {
@@ -657,6 +725,10 @@
     // background-position: 80% -90%;
     background-repeat: no-repeat;
     margin-bottom: 0px;
+    -webkit-transition: transform 0.45s var(--transition-ease-in);
+    -moz-transition: transform 0.45s var(--transition-ease-in);
+    -o-transition: transform 0.45s var(--transition-ease-in);
+    transition: transform 0.45s var(--transition-ease-in);
 
     .galaxyDiv {
         position: relative;
@@ -1050,5 +1122,17 @@
 
     to {
         transform: rotate(0deg);
+    }
+}
+
+@keyframes slideUp {
+    from {
+        transform: translateY(50px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0px);
+        opacity: 1;
     }
 }
