--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
   --font-color-light: #F7F7F7;
   --font-color-dark: #2B2B2B; 
   --font-color-red: #E82E25;
-  --transition-ease-in: cubic-bezier(.6,0,.4,1);
+  --transition-ease-in: cubic-bezier(0.455,0.030,0.515,0.955);
 
 
 
