--- a/app/globals.css
+++ b/app/globals.css
@@ -9,13 +9,15 @@
   --font-Poppins: 'Poppins-Medium', 'Courier New', monospace, Sans-serif;
   --font-Poppins-regular: 'Poppins-Regular', 'Courier New', monospace, Sans-serif;
   --font-Helvetica: 'Helvetica', 'Courier New', monospace, Sans-serif;
+  --font-InterExtra: 'Inter-Extra', 'Courier New', monospace, Sans-serif;
   --foreground: #262626;
   --background-color-light: #F3F3F3;
   --background-color-dark: #0D1116;
   --background-color-dark2: #161616;
   --background-color-dark3: #262626;
   --background-color-darker: #111010;
-  --font-color-dimmed: #a1a1a1;
+  --background-color-darkerer: #070707;
+  --font-color-dimmed: #666666;
   --font-color-light: #F7F7F7;
   --font-color-dark: #2B2B2B; 
   --font-color-red: #E82E25;
@@ -131,7 +133,7 @@ a {
 
 @font-face {
   font-family: 'Poppins-Medium';
-  src: url('../public/assets/fonts/Poppins-Medium.ttf') format('truetype');
+  src: url('../public/assets/fonts/Inter-Medium.ttf') format('truetype');
 }
 
 @font-face {
@@ -141,12 +143,17 @@ a {
 
 @font-face {
   font-family: 'Helvetica';
-  src: url('../public/assets/fonts/Helvetica.ttf') format('truetype');
+  src: url('../public/assets/fonts/Inter-ExtraBold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins-Regular';
-  src: url('../public/assets/fonts/Poppins-Regular.ttf') format('truetype');
+  src: url('../public/assets/fonts/Inter-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter-Extra';
+  src: url('../public/assets/fonts/Inter-ExtraBold.ttf') format('truetype');
 }
 
 
