--- a/app/components/pricing-component/pricing.module.scss
+++ b/app/components/pricing-component/pricing.module.scss
@@ -107,6 +107,9 @@
         justify-content: center;
         align-items: center;
         padding-bottom: 70px;
+        h1 {
+            font-size: 25px;
+        }
         p {
             width: 95%;
             text-align: center;
