--- a/app/components/pricing-component/pricing.module.scss
+++ b/app/components/pricing-component/pricing.module.scss
@@ -24,7 +24,7 @@
     h1 {
         padding-top: 30px;
         font-size: 45px;
-        font-family: var(--font-Helvetica);
+        font-family: var(--font-Inter-ExtraBold);
         z-index: 10;
 
     }
@@ -33,7 +33,7 @@
         margin-top: 15px;
         text-align: flex-start;
         width: 50%;
-        font-family: var(--font-Poppins);
+        font-family: var(--font-Inter);
         font-size: small;
         color: var(--font-color-dimmed);
         
@@ -78,7 +78,7 @@
         span {
             font-size: small;
 
-            font-family: var(--font-Poppins);
+            font-family: var(--font-Inter);
             color: black;
         }
     }
