--- a/app/components/landing-component/landing-page.module.scss
+++ b/app/components/landing-component/landing-page.module.scss
@@ -985,6 +985,8 @@
     // box-shadow: 0px -15px 45px #ef2957bc;
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 1000;
 
 
     .topDiv {
